--- a/user/Makefile
+++ b/user/Makefile
@@ -1,2 +1,3 @@
 all:
-	x86_64-elf-gcc -nostdlib -fPIC -fPIE test.c -o TEST.EXE
+	x86_64-elf-gcc -nostdlib -fPIC -fPIE test.c -c
+	x86_64-elf-ld -nostdlib test.o -o TEST.EXE -Tlink.ld -zmax-page-size=0x1000
