Add basic initrd to replace modules

--- a/viper.cfg
+++ b/viper.cfg
@@ -2,7 +2,5 @@ viperOS {
     KERNEL=kernel.elf
 
     MODULE=FONT.F08
-    MODULE=TEST.EXE
-    MODULE=LD.SO
-    MODULE=LIBC.SO
+    MODULE=INITRD.TAR
 }
